// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`outputs custom package.json 1`] = `
Object {
  "author": "me",
  "browser": "./browser.lol",
  "dependencies": Object {
    "left-pad": "1.0.0",
  },
  "description": "A new project based on @magento/venia-concept",
  "license": "UNLICENSED",
  "name": "whee",
  "private": true,
  "scripts": Object {
    "storybook": "start-storybook -p 9001 -c src/.storybook",
    "storybook:build": "build-storybook -c src/.storybook -o storybook-dist",
    "watch": "yarn run do watch this",
  },
  "version": "0.0.1",
}
`;

exports[`outputs npm package.json 1`] = `
Object {
  "author": "me",
  "browser": "./browser.lol",
  "dependencies": Object {
    "left-pad": "1.0.0",
  },
  "description": "A new project based on @magento/venia-concept",
  "license": "UNLICENSED",
  "name": "whee",
  "private": true,
  "scripts": Object {
    "storybook": "start-storybook -p 9001 -c src/.storybook",
    "storybook:build": "build-storybook -c src/.storybook -o storybook-dist",
    "watch": "npm run do watch this",
  },
  "version": "0.0.1",
}
`;
